# barp-music-video-ai

./: .gitignore  README.md
backend/: .env  data.json  elevent_labs.py  exp.py  gemini.py  get_cloned_voice.py  main.py  pyproject.toml
backend/servers/: suno.py
backend/servers/suno-ai-api/.next/: app-build-manifest.json  trace
backend/servers/suno-ai-api/.next/server/: app-paths-manifest.json  next-font-manifest.js  next-font-manifest.json  server-reference-manifest.js  server-reference-manifest.json  webpack-runtime.js
backend/servers/suno-ai-api/.next/server/app/: _not-found_client-reference-manifest.js  not-found.js  not-found_client-reference-manifest.js
backend/servers/suno-ai-api/.next/server/vendor-chunks/: @swc.js  @ungap.js  @vercel.js  agent-base.js  asynckit.js  atomic-sleep.js  axios-cookiejar-support.js  axios.js  bail.js  combined-stream.js  debug.js  decode-named-character-reference.js  delayed-stream.js  dequal.js  devlop.js  estree-util-is-identifier-name.js  extend.js  fast-redact.js  follow-redirects.js  form-data.js  has-flag.js  hast-util-to-jsx-runtime.js  hast-util-whitespace.js  html-url-attributes.js  http-cookie-agent.js  inline-style-parser.js  is-plain-obj.js  mdast-util-from-markdown.js  mdast-util-to-hast.js  mdast-util-to-string.js  micromark-core-commonmark.js  micromark-factory-destination.js  (+53 more)
backend/utils/video_utils/: combine_video_audio.py
backend/utils/voice_utils/: clone_voice.py  generate_final_mix.py  isolate_voice.py  pitch_correction.py
backend/voice_utils/: generate_final_mix.py  isolate_voice.py
(+40 files in other folders)
