[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["Aryan Madhav Verma <amv190301@gmail.comm>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
google-generativeai = "^0.5.4"
python-dotenv = "^1.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
