[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["Aryan Madhav Verma <amv190301@gmail.comm>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
google-generativeai = "^0.5.4"
python-dotenv = "^1.0.1"
google-ai-generativelanguage = "^0.6.4"
pydantic = "^2.7.2"
fastapi = "^0.111.0"
pyngrok = "^7.1.6"
elevenlabs = "^1.2.2"
ngrok = "^1.3.0"
librosa = "^0.10.2.post1"
pydub = "^0.25.1"
moviepy = "^1.0.3"
uvicorn = "^0.30.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
